--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,7 +28,7 @@ main {
 
 .container__info {
   width: 85%;
-  max-width: 600px;
+  max-width: 500px;
   height: auto;
   margin: 100px auto 0;
   text-align: center;
@@ -50,7 +50,7 @@ main {
 
 .container__form {
   width: 85%;
-  max-width: 600px;
+  max-width: 500px;
   height: auto;
   margin: 0 auto;
 }
@@ -58,24 +58,86 @@ main {
 .container__form--free {
   width: 100%;
   height: auto;
-  text-align: center;
-  background-color: var(--blue);
-  border-radius: 15px;
-  box-shadow: 0px 10px 20px -1px var(--dark-blue);
 }
 
-.container__form--free p {
-  padding: 15px 40px;
+.container__form--free button {
+  width: 100%;
+  padding: 15px 50px;
   font-size: 1.6rem;
+  text-align: center;
+  background-color: var(--blue);
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px -1px var(--dark-blue);
   color: white;
 }
 
-.container__form--free p span {
+.container__form--free button span {
   font-weight: 700;
 }
 
 .container__form--inputs {
-  margin: 20px 0 0 0;
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 10px 20px -1px var(--dark-blue);
+}
+
+.inputs-details {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 3px;
+  border: 1px solid var(--grayish-blue);
+}
+
+.container__form--inputs input::placeholder {
+  color: var(--dark-blue);
+}
+
+.container__form--inputs button {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 10px;
+  background-color: var(--green);
+  border: none;
+  border-radius: 3px;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.container__form--inputs h4 {
+  padding: 0 30px;
+  text-align: center;
+  font-weight: 400;
+  color: var(--grayish-blue);
+}
+
+.container__form--inputs h4 span {
+  color: var(--red);
 }
 
 /* -----Formulario----- */
+
+.invalidError {
+  border: 3px solid var(--red);
+  background-image: url("../../images/icon-error.svg");
+  background-repeat: no-repeat;
+  background-position: center right 25px;
+}
+
+.styleParrafo {
+  display: none;
+  color: var(--red);
+  font-size: 10px;
+  text-align: end;
+  margin-bottom: 15px;
+}
